--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
-[workspace]
+[package]
+name = "dvorak-message"
+version = "0.1.0"
+edition = "2021"
 
-members = ["message"]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
