--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1.24.2", features = [
+    "rt",
+    "net",
+    "io-util",
+    "macros",
+    "rt-multi-thread",
+] }
+bytes = "1.3.0"
+
+
+[features]
+default = []
+full = ["message"]
+
+message = []
