--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,11 @@ tokio = { version = "1.24.2", features = [
     "io-util",
     "macros",
     "rt-multi-thread",
-] }
-bytes = "1.3.0"
+], optional = true }
+bytes = { version = "1.3.0", optional = true }
 
 
 [features]
 default = []
 full = ["message"]
-
-message = []
+message = ["tokio", "bytes"]
