--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,6 @@ bytes = { version = "1.3.0", optional = true }
 
 
 [features]
-default = []
+default = ["full"]
 full = ["message"]
 message = ["tokio", "bytes"]
