--- a/dctor/Cargo.toml
+++ b/dctor/Cargo.toml
@@ -6,6 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[features]
-tokio = []
+tokio = { version = "1.24.2", features = [
+    "rt",
+    "net",
+    "sync",
+    "io-util",
+    "macros",
+    "rt-multi-thread",
+] }
+bytes = "1.3.0"
+dvorak_message = { path = "../dvorak-message" }
