--- a/dctor/Cargo.toml
+++ b/dctor/Cargo.toml
@@ -16,3 +16,4 @@ tokio = { version = "1.24.2", features = [
 ] }
 bytes = "1.3.0"
 dvorak_message = { path = "../dvorak-message" }
+async-trait = "0.1.68"
