--- a/dc-message-server/Cargo.toml
+++ b/dc-message-server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dv_message_server"
+name = "dc_message_server"
 description = "a server of Dvorak Message for communication"
 version = "0.1.0"
 edition = "2021"
@@ -19,3 +19,4 @@ clap = { version = "4.0.32", features = ["derive"] }
 once_cell = "1.17.0"
 bytes = "1.3.0"
 dvorak_message = { path = "../dvorak-message" }
+async-trait = "0.1.68"
