--- a/dc-message-server/Cargo.toml
+++ b/dc-message-server/Cargo.toml
@@ -12,6 +12,7 @@ tokio = { version = "1.24.2", features = [
     "net",
     "sync",
     "io-util",
+    "io-std",
     "macros",
     "rt-multi-thread",
 ] }
